--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@john-yuan/dev-browserify-builder": "^1.0.1",
     "@john-yuan/dev-browserify-watcher": "^1.0.0",
     "@john-yuan/dev-server": "^1.0.1",
+    "bundle-collapser": "^1.3.0",
     "mocha": "^6.1.4"
   },
   "dependencies": {
@@ -33,7 +34,8 @@
     "Ajax",
     "JSONP",
     "XMLHttpRequest",
-    "HttpRequest"
+    "HttpRequest",
+    "xhr"
   ],
   "bugs": {
     "url": "https://github.com/john-yuan/HttpClient.js/issues"
