--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "node ./build/build.js",
     "test": "mocha",
+    "lint": "eslint lib",
     "dev": "node ./build/dev.js"
   },
   "author": "JOHN YUAN",
@@ -15,6 +16,7 @@
     "@john-yuan/dev-browserify-watcher": "^1.0.0",
     "@john-yuan/dev-server": "^1.0.1",
     "bundle-collapser": "^1.3.0",
+    "eslint": "^6.0.1",
     "mocha": "^6.1.4"
   },
   "dependencies": {
