--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/class/HttpClient.js",
   "scripts": {
     "build": "node ./build/build.js",
-    "test": "mocha",
+    "test": "jasmine --config=test/node/support/jasmine.json",
     "lint": "eslint lib",
     "dev": "node ./build/dev.js"
   },
@@ -17,7 +17,9 @@
     "@john-yuan/dev-server": "^1.0.1",
     "bundle-collapser": "^1.3.0",
     "eslint": "^6.0.1",
-    "mocha": "^6.1.4"
+    "jasmine": "^3.4.0",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1"
   },
   "dependencies": {
     "x-common-utils": "^1.4.0",
