--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint": "^6.0.1",
     "jasmine": "^3.4.0",
     "jasmine-core": "^3.4.0",
-    "jasmine-spec-reporter": "^4.2.1"
+    "jasmine-spec-reporter": "^4.2.1",
+    "promise-polyfill": "^8.1.3"
   },
   "dependencies": {
     "x-common-utils": "^1.4.0",
